syntax = "proto3";

package com.pal2hmnk.example.generated.grpc.services;

import "services/orders.proto";
import "google/protobuf/empty.proto";

service OrderService {
  rpc FindOrderHistory (google.protobuf.Empty) returns (OrderHistoryList) {}
}
